# MonsoonDashboard

./: AI_CONTEXT.md  ARCHITECTURE.md  DECISIONS.md  PROJECT.md  PROJECT_STATUS.md  TO_DO.md  main.py  pyproject.toml
.github/workflows/: update_dashboard.yml
cache/: etag_manager.py
cache/xml/: 1780737869866024.xml
collectors/: sachet.py
collectors/national/: cap_collector.py
collectors/urban/mumbai/: mcgm.py
dashboard/: generate_dashboard.py
dashboard/components/: footer.py  header.py  health_strip.py  national_cards.py  summary_cards.py  urban_cards.py
data/processed/: business_alerts.json  dashboard_alerts.json  executive_summary.json  geography_alerts.json  mumbai_summary.json  national_briefing.json  national_dashboard.json  state_summary.json  weather_dashboard_summary.json  weather_summary.json
data/processed/legacy/: business_alerts.json  executive_summary.json  state_summary.json
data/raw/: cap_alerts.json  mcgm_alerts.json  sachet_alerts.json
docs/: index.html
launcher/: dashboard_launcher.py  run_dashboard.py
parsers/: cap_parser.py
processes/: aggregate_alerts.py  aggregate_states.py  aggregate_weather.py  normalize_geography.py  process_sachet.py
processes/legacy/: build_summary.py
processes/national/: build_dashboard_alerts.py  build_national_briefing.py  build_national_dashboard.py  build_weather_summary.py  process_cap.py
processes/urban/mumbai/: aws.py  flooding.py  process_mcgm.py  summary.py  tides.py  traffic.py  warnings.py  weather.py
tools/: analyze_cap_data.py  check_geography.py
(+8 files in other folders)
