[project]
name = "indiaweatherintelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "jinja2>=3.1.6",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "requests>=2.34.2",
]
